removes perm size JVM option as it is not supported since jdk8